# food-menu

./: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3e73b27ae79d_food_name_column.py  80567abddb96_create_foods_table.py
backend/src/controller/: __init__.py  _base.py  food.py
backend/src/database/: database.py  models.py
backend/src/schemas/: food.py
backend/tests/: conftest.py  test_controller.py
