[tool.poetry]
name = "food-menu"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
reactpy = "^1.0.2"
pyscopg2 = "^66.0.2"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
ruff = "^0.1.5"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude = "(migrations/)"

[tool.isort]
line_length = 79
profile = "black"
extend_skip = ["migrations"]

[tool.ruff]
line-length = 79
exclude = [".venv", "migrations"]

[tool.taskipy.tasks]
lint = "ruff . && black --check . && isort . --diff"
format = "black . && isort ."
backend = "uvicorn src.app:app --reload --port 8000"